# powe_rs

./: CHANGELOG.md  Cargo.toml  Changelog.md  README.md
.github/workflows/: release.yml
assets/: screen.apng
src/: index.html  main.rs  request.rs  systemctl.rs
